빌리지 기능 추가 및 출석, GBS 관련 레포지토리/서비스 수정
